--- a/exampleCRUD/src/main/resources/application.properties
+++ b/exampleCRUD/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=CRUDService
+spring.application.name=exampleCRUD
 # Spring Datasource configuration for MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/crud_db
+spring.datasource.url=jdbc:mysql://localhost:3306/employees_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,4 +11,3 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-
